--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="HandheldFriendly" content="true">
     <title>Vital Partners</title>
-    <link rel="stylesheet" type="text/css" href="/home/neosoft/HTML/assignment1.1/assignment1.1.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
@@ -392,7 +392,7 @@
       </p>
     </div>
   </footer>
-  
+
     <footer class="footer3">
       <div style="width:300px;margin-left:600px;padding-top:1px;">
         <p style="color: gray;text-align:left;padding-left:10px;padding:1px 0;font-size:20px;">Who Designed This Site?</p>
