--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </nav>
     <header>
       <div style="margin-left:400px;">
-        <img src="/home/neosoft/HTML/assignment1.1/images.png" alt="logo" style="height:100px">
+        <img src="/images/images1.png" alt="logo" style="height:100px">
       </div>
       <div style="text-align:center">
         <p style="color:white;font:30px Verdana, sans-serif;">
