--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </nav>
     <header>
       <div style="margin-left:400px;">
-        <img src="/images1.png" alt="logo" style="height:100px">
+        <img src="images1.png" alt="logo" style="height:100px">
       </div>
       <div style="text-align:center">
         <p style="color:white;font:30px Verdana, sans-serif;">
@@ -95,7 +95,7 @@
       </div>
 
       <div class="imageBaby">
-        <img src="/baby1.jpg" alt="logo" id="imageBaby">
+        <img src="baby1.jpg" alt="logo" id="imageBaby">
       </div>
     </section>
 
@@ -169,7 +169,7 @@
 
       <div class="female">
         <div class="femaleIcon">
-          <img src="/female1.jpg" alt="logo"id="emoji" >
+          <img src="female1.jpg" alt="logo"id="emoji" >
         </div>
         <div style="height:300px;margin-top:20px;text-align:center;font:22px arial,serif;padding:0 40px;">
           <h1 style="margin-top:1px;"><b>What is lorem ipsum?</b></h1>
@@ -188,7 +188,7 @@
 
       <div class="male">
         <div class="maleIcon">
-          <img src="/male1.jpg" alt="logo" id="emoji" >
+          <img src="male1.jpg" alt="logo" id="emoji" >
         </div>
         <div style="height:300px;margin-top:20px;text-align:center;font:22px arial,serif;
         padding:0 40px;">
@@ -217,7 +217,7 @@
               <p><i class="fa fa-chevron-left" aria-hidden="true"></i></p>
             </div>
             <div id="image">
-              <img src="/baby1.jpg" alt="logo" id="babyimage">
+              <img src="baby1.jpg" alt="logo" id="babyimage">
             </div>
             <div class="forward">
               <p><i class="fa fa-chevron-right" aria-hidden="true"></i></p>
@@ -241,7 +241,7 @@
 
       <div class="post1">
         <div class="images">
-            <img src="/person1.jpg" alt=" A user" height="100%" width="100%">
+            <img src="person1.jpg" alt=" A user" height="100%" width="100%">
         </div>
         <div style="height:300px;margin-top:20px;font:24px arial,serif;">
           <p style="margin-top:-10px;"><b>Duis eget leo sit amet orci suscipit laciana neque</b></p>
@@ -256,7 +256,7 @@
 
       <div class="post2">
         <div class="images">
-            <img src="/kid1.jpg" alt=" A user" height="100%" width="100%">
+            <img src="kid1.jpg" alt=" A user" height="100%" width="100%">
         </div>
         <div style="height:300px;margin-top:20px;font:24px arial,serif;">
           <p style="margin-top:-10px;color:green;"><b>Duis eget leo sit amet orci suscipit laciana neque</b></p>
@@ -272,7 +272,7 @@
 
       <div class="post3">
         <div class="images">
-          <img src="/woman1.jpg" alt=" A user" height="100%" width="100%">
+          <img src="woman1.jpg" alt=" A user" height="100%" width="100%">
         </div>
         <div style="height:300px;margin-top:20px;font:24px arial,serif;">
           <p style="margin-top:-10px;"><b>Duis eget leo sit amet orci suscipit laciana neque</b></p>
@@ -289,7 +289,7 @@
 
     <footer>
       <div style="margin-left:600px;">
-        <img src="/images1.png" alt="logo" style="height:100px">
+        <img src="images1.png" alt="logo" style="height:100px">
       </div>
       <div style="text-align:center">
         <p style="color:white;font:30px Verdana, sans-serif;">Simply Dummy text of the</p>
